[package]
name = "logstore"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]

[dependencies]
base64 = "0.9.0"
byteorder = "1.2.1"
itertools = "0.7"
log = "0.4"
multimap = "0.4.0"
rmp-serde = "0.13.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "0.4.0"
time = "0.1.39"
twox-hash = "1.1.0"
lru-cache = "0.1.1"
positioned-io = "0.2.2"

scoped_threadpool = "0.1.8"

bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[patch.crates-io]
positioned-io = { path = "/home/wspeirs/src/positioned-io" }
