[package]
name = "logstore"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]

[dependencies]
base64 = "0.9"
byteorder = "1.2"
bytes = "0.4"
chan-signal = "0.3"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
itertools = "0.7"
log = "0.4"
multimap = "0.4"
positioned-io = "0.2.2"
rayon = "1.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "0.5"
time = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
twox-hash = "1.1"

[patch.crates-io]
positioned-io = { path = "/home/wspeirs/src/positioned-io" }
